# rust-aws-crud

./: Cargo.toml
src/: main.rs  models.rs
