[package]
name = "todo_new"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.7", default-features = false, features = [
    "apigw_http",
] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.69"
axum = "0.6.6"
derive_builder = "0.12.0"
